--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Обновить";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 часа";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 дней";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Никогда";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Чтобы записывать звук, нажмите «Настройки» и затем включите микрофон";
 
@@ -127,6 +136,9 @@
 /* Button title. Refers to discarding photo/video edits in media composer. */
 "media.button.discard" = "Отменить";
 
+/* Push notification for a comment to message */
+"notification.comment.reaction" = "Отреагировал %@ на комментарий";
+
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Прокомментировал(-а): %@";
 
@@ -135,6 +147,12 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ только что принял(-а) ваше приглашение присоединиться к HalloApp 🎉";
+
+/* New message notification text when message is a location. */
+"notification.location" = "📍 Местоположение";
+
+/* Push notification for a reaction to message */
+"notification.message.reaction" = "Отреагировал %@ на сообщение";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "Новый момент";
@@ -216,7 +234,4 @@
 
 /* Row in Settings screen */
 "title.privacy" = "Конфиденциальность";
-
-/* Displayed in place of contact name if name is not known. */
-"unknown.contact" = "Неизвестный контакт";
 
