--- a/Share Extension/id.lproj/Localizable.strings
+++ b/Share Extension/id.lproj/Localizable.strings
@@ -175,6 +175,9 @@
 /* Placeholder when sharing text only. */
 "share.composer.placeholder.text" = "Tulis postingan";
 
+/* Title of alert displayed while processing media shared by share extension */
+"share.composer.processing.media" = "Memproses Media...";
+
 /* Alert dialog message shown when uploading fails. */
 "share.composer.uploading.fail.message" = "Silakan coba lagi nanti.";
 
@@ -215,9 +218,6 @@
 
 /* Row in Settings screen */
 "title.privacy" = "Privasi";
-
-/* Displayed in place of contact name if name is not known. */
-"unknown.contact" = "Kontak Tak Dikenal";
 
 /* How many bytes from total have been uploaded */
 "uploading.bytes.progress" = "%1$@ dari %2$@";
