--- a/Share Extension/ru.lproj/Localizable.strings
+++ b/Share Extension/ru.lproj/Localizable.strings
@@ -70,6 +70,15 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Обновить";
 
+/* Group content expiry time limit option */
+"chat.group.expiry.option.24hours" = "24 часа";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.30days" = "30 дней";
+
+/* Group content expiry time limit option */
+"chat.group.expiry.option.never" = "Никогда";
+
 /* Alert message when missing microphone access */
 "chat.mic.access.denied.message" = "Чтобы записывать звук, нажмите «Настройки» и затем включите микрофон";
 
@@ -166,6 +175,9 @@
 /* Placeholder when sharing text only. */
 "share.composer.placeholder.text" = "Напиши пост";
 
+/* Title of alert displayed while processing media shared by share extension */
+"share.composer.processing.media" = "Обработка медии...";
+
 /* Alert dialog message shown when uploading fails. */
 "share.composer.uploading.fail.message" = "Повторите попытку позже.";
 
@@ -206,9 +218,6 @@
 
 /* Row in Settings screen */
 "title.privacy" = "Конфиденциальность";
-
-/* Displayed in place of contact name if name is not known. */
-"unknown.contact" = "Неизвестный контакт";
 
 /* How many bytes from total have been uploaded */
 "uploading.bytes.progress" = "%1$@ of %2$@";
